--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,159 @@
 /* Acá va tu código */
+body {
+  background-image: url(https://scontent-atl3-1.cdninstagram.com/vp/9a530384f7fedabd436a877655fd2b37/5DEB5C44/t51.2885-15/e35/c0.135.1080.1080a/s480x480/65631177_2375119692602956_1722362206724695579_n.jpg?_nc_ht=scontent-atl3-1.cdninstagram.com);
+
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+h1,
+h2 {
+  display: block;
+  font-size: 3em;
+  font-family: Arial;
+  text-align: center;
+  color: #160b03;
+  background-color: rgb(248, 246, 246);
+}
+label {
+  font-size: 2em;
+  text-align: justify;
+  color: black;
+  background-color:rgba(248, 246, 246, 0.822);
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+button {
+  width: 20%;
+  padding: 4px 4px;
+  color: white;
+  font-family: sans-serif;
+  text-decoration: none;
+  font-size: 3vw;
+  background-color:#980218;
+  border: ridge;
+}
+p#insMsj{
+  font:arial;
+}
+.InstruccionesDatos {
+  margin-top: 0%;
+ display: grid;
+ grid-template-columns: 1fr 1fr;  
+ grid-template-rows: 50px 50px; 
+}
+
+#ingresar {
+  position: absolute;
+  right: 50px;
+  top: 530px;
+}
+button#uso{
+  top:0%;
+  text-align: center;
+}
+button#btnOutside {
+ 
+  right: 0px;
+  top: 0px;
+  color:white;
+  background-color:#980218;
+  position: fixed;
+
+}
+
+p {
+  font-size: 2em;
+  text-align: justify;
+  color: black;
+  background-color: rgba(248, 246, 246, 0.808);
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+#ejemplo {
+  display: list-item;
+  position: absolute;
+  right: 100px;
+  top: 230px;
+  opacity: 0.9;
+  padding-left: 20px;
+  max-width: 100%;
+}
+
+input {
+  width: 40%;
+  padding: 5px 20px;
+  margin: 0px;
+  border: 5px inset rgb(18, 38, 41);
+  background-color: rgb(53, 84, 88);
+  font-size: 2em;
+  color: white;
+
+}
+#contraseñaGenerada{
+  font-family:  'Gill Sans';
+  font-size: 3em;
+  
+}
+#Cod{
+  font-family:  'Gill Sans';
+  font-size: 3em;
+  text-align: center;
+}
+p#insMsj{
+  font-size: 1.5em;
+}
+.msj {
+  display: grid;
+ grid-template-columns: 1fr 1fr;  
+ grid-template-rows: 50px 50px; 
+ 
+}
+.msj>div>textarea{
+  width: 50%;
+  height: 180px;
+  
+}
+.msj>div>button{
+  width: 30%;
+  padding: 4px 4px;
+  color: #0a0a0a;
+  font-family: sans-serif;
+  text-decoration: none;
+  font-size: 3vw;
+  background-color: #c78c01;
+  border: ridge;
+  border-color: rgb(32, 15, 2);
+ }
+.msj>div>p{
+  text-align: left; 
+}
+.ventanas {
+  width: 100%;
+}
+#inicio {
+  width: 100%;
+}
+
+#cerrarSesion {
+  display: none;
+}
+#cuenta {
+  display: none;
+  text-align: center;
+}
+.envios{
+  background-color: rgba(190, 235, 235, 0.534);
+}
+.envios > button {
+  text-align: center;
+  margin: 30% 5% 5% 20%;
+  color: rgb(247, 146, 14);
+  background-color: rgb(7, 7, 7);
+  size: 2em;
+  
+}
+h3{
+  font-size: 5em;
+  color: white;
+  text-align: center;
+  background-color: #09090eda
+
+}
